# ibus-qt

./: .gitignore  CMakeLists.txt  ibusqt.pc.in  makibus-qt.pro  qibusbus.cpp
